Fix: NullPointerException in FXMLLoader
The FXMLLoader was failing because the location of the FXML file was not being correctly specified. This commit fixes the issue.