@@ -1,73 +1,58 @@
-# Welcome to your Lovable project
 
-## Project info
+# Focus Task Buddy
 
-**URL**: https://lovable.dev/projects/08d33a0b-e9d2-443e-94b8-c0b00e95bbef
+A JavaFX-based task management application.
 
-## How can I edit this code?
+## Project Structure
 
-There are several ways of editing your application.
-
-**Use Lovable**
-
-Simply visit the [Lovable Project](https://lovable.dev/projects/08d33a0b-e9d2-443e-94b8-c0b00e95bbef) and start prompting.
-
-Changes made via Lovable will be committed automatically to this repo.
-
-**Use your preferred IDE**
-
-If you want to work locally using your own IDE, you can clone this repo and push changes. Pushed changes will also be reflected in Lovable.
-
-The only requirement is having Node.js & npm installed - [install with nvm](https://github.com/nvm-sh/nvm#installing-and-updating)
-
-Follow these steps:
-
-```sh
-# Step 1: Clone the repository using the project's Git URL.
-git clone <YOUR_GIT_URL>
-
-# Step 2: Navigate to the project directory.
-cd <YOUR_PROJECT_NAME>
-
-# Step 3: Install the necessary dependencies.
-npm i
-
-# Step 4: Start the development server with auto-reloading and an instant preview.
-npm run dev
+```
+src/
+├── Main.java
+├── Admin.java
+├── RegularUser.java
+├── User.java
+├── Task.java
+├── DateTime.java
+├── DataStorage.java
+├── PrioritySelection.java
+├── DataSet.java
+├── controllers/
+│   ├── LoginController.java
+│   ├── RegisterController.java
+│   ├── DashboardController.java
+│   ├── ProfileController.java
+│   ├── CompletedTasksController.java
+│   └── TaskForm.java
+├── views/
+│   ├── LoginView.fxml
+│   ├── RegisterView.fxml
+│   ├── DashboardView.fxml
+│   ├── ProfileView.fxml
+│   ├── CompletedTasksView.fxml
+│   └── TaskFormView.fxml
+└── styles/
+    └── application.css
 ```
 
-**Edit a file directly in GitHub**
+## Running the Application
 
-- Navigate to the desired file(s).
-- Click the "Edit" button (pencil icon) at the top right of the file view.
-- Make your changes and commit the changes.
+1. Ensure JavaFX is properly set up in your IDE
+2. For Eclipse: 
+   - Right-click on the project
+   - Run As > Java Application
+   - Select Main as the main class
 
-**Use GitHub Codespaces**
+3. VM Arguments for JavaFX (if needed):
+   ```
+   --module-path /path/to/javafx-sdk/lib --add-modules=javafx.controls,javafx.fxml
+   ```
 
-- Navigate to the main page of your repository.
-- Click on the "Code" button (green button) near the top right.
-- Select the "Codespaces" tab.
-- Click on "New codespace" to launch a new Codespace environment.
-- Edit files directly within the Codespace and commit and push your changes once you're done.
+## Default Login Credentials
 
-## What technologies are used for this project?
+- Admin:
+  - Username: admin
+  - Password: admin
 
-This project is built with:
-
-- Vite
-- TypeScript
-- React
-- shadcn-ui
-- Tailwind CSS
-
-## How can I deploy this project?
-
-Simply open [Lovable](https://lovable.dev/projects/08d33a0b-e9d2-443e-94b8-c0b00e95bbef) and click on Share -> Publish.
-
-## Can I connect a custom domain to my Lovable project?
-
-Yes, you can!
-
-To connect a domain, navigate to Project > Settings > Domains and click Connect Domain.
-
-Read more here: [Setting up a custom domain](https://docs.lovable.dev/tips-tricks/custom-domain#step-by-step-guide)
+- Regular User:
+  - Username: user
+  - Password: user123
